--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <section class="container-fluid mt-3 py-3">
-        <div class="row d-flex text-center">
+        <div class="row d-flex text-center my-3">
           <h3 class="col4">Offerte della settimana</h3>
         </div>
         <div class="row d-flex flex-row gap-3 align-items-center justify-content-center">
